@@ -6,7 +6,7 @@
 and semantics are as close as possible to those of the Perl 5 language.
 
                        Written by Philip Hazel
-           Copyright (c) 1997-2012 University of Cambridge
+           Copyright (c) 1997-2013 University of Cambridge
 
 -----------------------------------------------------------------------------
 Redistribution and use in source and binary forms, with or without
@@ -179,6 +179,20 @@ while ((t = *data++) != XCL_END)
              == (t == XCL_PROP))
         return !negated;
       break;
+      
+      case PT_UCNC:
+      if (c < 0xa0)                                                  
+        {                                                            
+        if ((c == CHAR_DOLLAR_SIGN || c == CHAR_COMMERCIAL_AT ||        
+             c == CHAR_GRAVE_ACCENT) == (t == XCL_PROP))
+          return !negated;
+        }                                      
+      else                                                                 
+        {                                                                   
+        if ((c < 0xd800 || c > 0xdfff) == (t == XCL_PROP))            
+          return !negated;
+        }                                                            
+      break;                                                           
 
       /* This should never occur, but compilers may mutter if there is no
       default. */
